WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278049
[WebGPU] Validation error in RenderBundleEncoder::drawIndexed
https://bugs.webkit.org/show_bug.cgi?id=278049
Summary
[WebGPU] Validation error in RenderBundleEncoder::drawIndexed
Mike Wyrzykowski
Reported
2024-08-13 14:42:02 PDT
[WebGPU] Validation error in RenderBundleEncoder::drawIndexed
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-08-13 14:42:49 PDT
radar://133788434
Mike Wyrzykowski
Comment 2
2024-08-13 14:47:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32138
EWS
Comment 3
2024-08-14 08:59:11 PDT
Committed
282235@main
(1a064bf88f16): <
https://commits.webkit.org/282235@main
> Reviewed commits have been landed. Closing PR #32138 and removing active labels.
Mike Wyrzykowski
Comment 4
2024-08-15 07:34:10 PDT
Reopened Bugzilla. This caused a regression in the clusteredShading sample, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=278165
.
Mike Wyrzykowski
Comment 5
2024-08-21 13:44:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32544
EWS
Comment 6
2024-08-21 17:29:04 PDT
Committed
282594@main
(270daeeb394a): <
https://commits.webkit.org/282594@main
> Reviewed commits have been landed. Closing PR #32544 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug