[WebGPU] Validation error in RenderBundleEncoder::drawIndexed https://bugs.webkit.org/show_bug.cgi?id=278049 rdar://133788434

Reviewed by Dan Glastonbury.

Index buffer size must be >= indexCount * indexSize + indexOffsetInBytes.

* LayoutTests/fast/webgpu/nocrash/fuzz-278049-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-278049.html: Added.
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::drawIndexed):

Canonical link: https://commits.webkit.org/282235@main